Add org switching capability.

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
     "clientID": "",
     "baseUrl": "https://localhost:9443",
-    "signInRedirectURL": "https://localhost:3000",
-    "signOutRedirectURL": "https://localhost:3000",
-    "scope": ["profile"]
+    "signInRedirectURL": "http://localhost:3000",
+    "signOutRedirectURL": "http://localhost:3000",
+    "scope": ["openid profile"],
+    "orgId": ""
 }
