Add theming and create apps for each region.

--- a/app-us/src/config.json
+++ b/app-us/src/config.json
@@ -1,8 +1,8 @@
 {
-    "clientID": "",
+    "clientID": "<US-APP-CLIENT-ID>",
     "baseUrl": "https://localhost:9443",
     "signInRedirectURL": "http://localhost:3000",
     "signOutRedirectURL": "http://localhost:3000",
-    "scope": ["openid profile"],
-    "orgId": ""
+    "scope": ["openid", "profile", "roles", "groups", "email"],
+    "orgId": "<US-CHILD-ORG-ID>"
 }
